# FoS-IQ-Taichi-Geogram

./: .gitignore  .gitmodules  BRUNO_FIX_RESULTS.md  CONTROLLER_AND_CAMERA_FIX.md  CRITICAL_FIXES_APPLIED.md  DEGENERACY_RULED_OUT.md  FINAL_FIXES.md  FINAL_STATUS.md  GITHUB_UPLOAD_SUMMARY.md  LICENSE  PHASE1_CONTROL_PANEL.md  PHASE2_COMPLETE.md  QUICKSTART_10K.md  README.md  SIZE_AND_CONTROLS_FIX.md  requirements.txt  run_geogram_foam.py  test_1500_frames.py  test_1k_frames.py  test_1k_multiple_steps.py  test_1k_simple.py  test_2k_frames.py  test_batch_1500.py  test_batch_2k_grid.py  test_batching_1k.py  test_bridge.py  test_bruno_fix_1k.py  test_day3.py  test_direct_100.py  test_double_1k.py  test_gil_release_3k.py  test_gradual.py  test_hardened_3k.py  test_marathon_1k.py  test_min_loop.py  test_one_sched_step.py  test_one_step.py  test_progressive.py  test_real_marathon.py  test_save_snapshot.py  (+9 more)
docs/: DAY1-2_STATUS.md  DAY3_COMPLETE.md  DAY4_COMPLETE.md  DAY4_SUMMARY.md  GEOGRAM_FIX_APPLIED.md  GEOGRAM_STATUS.md  HARDENED_BRIDGE_APPLIED.md  LAUNCH.md  N100_TEST.md  OPTION_B_COMPLETE.md  QUICKSTART.md  READY_TO_SHIP.md  TAICHI_INTEGRATION.md  THREAD_SAFETY_FIX.md  geogram_tailed_foam_cycle_full_blueprint_option_b_m_2.md
geogram_repro/: CMakeLists.txt  repro_periodic_laguerre.cpp
geom_bridge/: CMakeLists.txt  bridge.cpp  bridge_threadsafe.cpp  build_geom_bridge.sh
src/: __init__.py  controller.py  geom_worker.py  geom_worker_sync.py  scheduler.py  sim_stub.py
